Mange/main/default/objects/Student__c/fields/About_College__c.field-meta.xml
<CustomField>
    <fullName>About_College__c</fullName>
    <formula>HYPERLINK(&quot;https://crescent.education/&quot;, &quot;college website&quot;)</formula>
    <label>About College</label>
    <type>Text</type>
</CustomField>