Mange/main/default/objects/Student__c/fields/About_You__c.field-meta.xml
<CustomField>
    <fullName>About_You__c</fullName>
    <description>Describe Your selves</description>
    <label>About You</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>