Mange/main/default/objects/Student__c/fields/Avg_Percentage_of_X_XII__c.field-meta.xml
<CustomField>
    <fullName>Avg_Percentage_of_X_XII__c</fullName>
    <label>Avg Percentage of  X &amp; XII</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>