Mange/main/default/objects/Student__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Male</label>
    <type>Checkbox</type>
</CustomField>