Mange/main/default/objects/Student__c/fields/Health_Issue__c.field-meta.xml
<CustomField>
    <fullName>Health_Issue__c</fullName>
    <label>Health Issue</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>