Mange/main/default/objects/Student__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dancing</fullName>
            </value>
            <value>
                <fullName>Eating</fullName>
            </value>
            <value>
                <fullName>Playing</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Sleeping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>