Mange/main/default/objects/Student__c/fields/House_Location__c.field-meta.xml
<CustomField>
    <fullName>House_Location__c</fullName>
    <label>House Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>