Mange/main/default/objects/Student__c/fields/Is_Physically_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Physically_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Physically Disabled</label>
    <type>Checkbox</type>
</CustomField>