Mange/main/default/objects/Student__c/fields/Meal_Type__c.field-meta.xml
<CustomField>
    <fullName>Meal_Type__c</fullName>
    <defaultValue>IF( $Profile.Name == &quot;Custom user&quot;, &quot;NON- VEG&quot;, &quot; &quot;)</defaultValue>
    <label>Meal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NON- VEG</fullName>
            </value>
            <value>
                <fullName>VEG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>