Mange/main/default/objects/Student__c/fields/pHONE_nUMBER__c.field-meta.xml
<CustomField>
    <fullName>pHONE_nUMBER__c</fullName>
    <label>pHONE nUMBER</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>