Mange/main/default/objects/Student__c/fields/Scholar_Fee__c.field-meta.xml
<CustomField>
    <fullName>Scholar_Fee__c</fullName>
    <label>Scholar Fee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>