Mange/main/default/objects/Student__c/fields/Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Social_Media__c</fullName>
    <label>Social Media</label>
    <type>Url</type>
</CustomField>