Mange/main/default/objects/Student__c/fields/Student_Address__c.field-meta.xml
<CustomField>
    <fullName>Student_Address__c</fullName>
    <label>Student Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>