Mange/main/default/objects/Student__c/fields/Student_Group__c.field-meta.xml
<CustomField>
    <fullName>Student_Group__c</fullName>
    <label>Student Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>House</valueSetName>
    </valueSet>
</CustomField>