Mange/main/default/objects/Student__c/fields/Student_Mail_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Mail_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Student Mail ID</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>