Mange/main/default/objects/Student__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <externalId>true</externalId>
    <label>Student Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>