Mange/main/default/objects/Student__c/fields/Sub_Caste__c.field-meta.xml
<CustomField>
    <fullName>Sub_Caste__c</fullName>
    <label>Sub Caste</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Caste__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BC -1</fullName>
            </value>
            <value>
                <fullName>BC -2</fullName>
            </value>
            <value>
                <fullName>OC -1</fullName>
            </value>
            <value>
                <fullName>OC -2</fullName>
            </value>
            <value>
                <fullName>SC -1</fullName>
            </value>
            <value>
                <fullName>SC -2</fullName>
            </value>
            <value>
                <fullName>ST -1</fullName>
            </value>
            <value>
                <fullName>ST -2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>