Mange/main/default/objects/Student__c/fields/Tution_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Tution_Fee_Paid__c</fullName>
    <label>Tution Fee Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>