Mange/main/default/objects/Student__c/fields/user_to_Assign__c.field-meta.xml
<CustomField>
    <fullName>user_to_Assign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>user to Assign</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>