Mange/main/default/objects/Student__c/validationRules/Student_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Student_Name__c,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Student_Name__c</errorDisplayField>
    <errorMessage>Enter Valid name</errorMessage>
</ValidationRule>