Mange/main/default/objects/Student__c/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Student_Group__c</columns>
    <columns>Branch__c</columns>
    <columns>Caste__c</columns>
    <columns>Hobbies__c</columns>
    <filterScope>Mine</filterScope>
    <label>My View</label>
</ListView>